tests/lexer/invalid/test_invalid_start_underscore.tok
1:2 IDENTIFIER "abc"
1:5 END_OF_FILE ""
